--- a/challenge-1/index.html
+++ b/challenge-1/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
     <title>Challenge-1</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Comfortaa', cursive;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
