--- a/challenge-2/index.html
+++ b/challenge-2/index.html
@@ -8,13 +8,21 @@
 </head>
 <body>
     <script>
-        let arr = [3, 4, 2, 3, 1, 5];
+                // 0  1  2  3  4  5  6
+        let arr = [3, 4, 2, 3, 1, 5, 4];
 
         const computeArr = (arr)=>{
             for(let i=0;i<arr.length;i++){
-                
+                if(arr[Math.abs(arr[i])] >= 0){
+                    arr[Math.abs(arr[i])] = -arr[Math.abs(arr[i])]; 
+                }
+                else{
+                    console.log(Math.abs(arr[i]));
+                }
             }
         }
+
+        computeArr(arr);
     </script>
 </body>
 </html>
